# PDF2Latex

./: .gitignore  AGENTS.md  README.MD  dev.ps1  dev.sh  docker-compose.yml  format.ps1
backend/: .env.example  Dockerfile  README.md  config.yaml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  analyzer.py  citation_auditor.py  coherence.py  graph.py  judge.py  planner.py  prompts.py  researcher.py  reviewer.py  schemas.py  state.py  utils.py  web_agent.py  writer.py
backend/app/api/: routes.py  schemas.py  websocket.py
backend/app/core/: __init__.py  cancellation.py  config.py  encryption.py  llm_factory.py  logging.py
backend/app/db/: database.py  models.py
backend/app/services/: __init__.py  assembly.py  bibliography.py  docling_worker.py  extractor.py  figure_scorer.py  latex.py  latex_lint.py  latex_templates.py  math_engines.py  ocr_engines.py  pipeline.py  progress.py  refine.py  regenerate.py  rejudge.py  runner.py  structure_engines.py  text_cleaning.py  web_extractor.py  web_search.py
backend/tests/: conftest.py  test_api_patch.py  test_bibliography.py  test_citation_auditor.py  test_coherence.py  test_diamond_merge.py  test_full_graph_e2e.py  test_multi_source.py  test_pipeline.py  test_planner.py  test_prompts.py  test_rpm_limiter.py  test_runner_e2e.py  test_sandbox.py  test_text_cleaning.py  test_web_agent.py  test_web_extractor.py  test_web_search.py  test_writer_context.py
docs/: CHANGELOG.md  GRAPH.md  TESTING.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Checkbox.tsx  Dropzone.tsx  FileEditor.tsx  Layout.tsx  PipelineBuilder.tsx  PipelineGraph.tsx  PipelineGraph.utils.test.ts  PipelineGraph.utils.ts  ProgressTimeline.tsx  ProviderSelect.tsx  SourceReorder.tsx  ThemeToggle.tsx
frontend/src/components/configure/: FiguresPanel.tsx  InformationPanel.tsx  PipelinePanel.tsx  StructurePanel.tsx  StylePanel.tsx
frontend/src/components/generate/: CompletedCard.tsx  NodeDetailPanel.tsx  RoleProviderGrid.tsx
frontend/src/hooks/: useGenerateWs.ts  useTheme.ts
frontend/src/lib/: api.ts  languages.ts  providerIcons.ts  utils.ts
frontend/src/pages/: ConfigurePage.tsx  GeneratePage.tsx  HistoryPage.tsx  PreviewPage.tsx  SettingsPage.tsx  UploadPage.tsx
frontend/src/stores/: appStore.ts
tools/: extract.py  generate_graph_mermaid.py
