[project]
name = "pdf2latex-backend"
version = "0.1.0"
description = "Agentic backend that turns N PDFs into a comprehensive LaTeX document"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "cryptography>=42.0",
    "pymupdf>=1.24",
    "pillow>=10.3",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-ollama>=0.2",
]

[project.optional-dependencies]
# Composable extraction pipeline — one extra per stage tool, all local & free.
# Install only the tools you actually select in the dashboard, e.g.:
#   uv sync --extra structure-docling --extra ocr-rapidocr --extra math-pix2tex
#
# Structure / tables -------------------------------------------------------
structure-docling = ["docling>=2.0"]
structure-marker = ["marker-pdf>=1.0"]
structure-mineru = ["magic-pdf>=1.0"]
# OCR (scanned pages) ------------------------------------------------------
ocr-tesseract = ["pytesseract>=0.3.10"]          # + system `tesseract` binary
ocr-rapidocr = ["rapidocr-onnxruntime>=1.3"]
ocr-paddle = ["paddleocr>=2.7", "paddlepaddle>=2.6"]
ocr-surya = ["surya-ocr>=0.6"]
ocr-dots = ["transformers>=4.44", "torch>=2.2"]
# Math / equations ---------------------------------------------------------
math-pix2tex = ["pix2tex>=0.1.2"]
math-nougat = ["nougat-ocr>=0.1.17"]
# Legacy aliases (kept so existing docs/commands keep working) -------------
ocr = ["pytesseract>=0.3.10"]
docling = ["docling>=2.0"]
markitdown = ["markitdown>=0.0.1a2"]
dev = [
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv", "storage"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort (import sorting). The formatter
# (`ruff format`) owns line wrapping, so E501 (line length) is disabled.
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
