[project]
name = "pdf2latex-backend"
version = "0.1.0"
description = "Agentic backend that turns N PDFs into a comprehensive LaTeX document"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "cryptography>=42.0",
    "pymupdf>=1.24",
    "pillow>=10.3",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-ollama>=0.2",
]

[project.optional-dependencies]
# All extraction/OCR/math/web tools in one shot.
#   uv sync --extra tools
tools = [
    "docling>=2.0",
    "pytesseract>=0.3.10",
    "rapidocr-onnxruntime>=1.3",
    "pix2tex>=0.1.2",
    "tavily-python>=0.5",
    "trafilatura>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv", "storage"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort (import sorting). The formatter
# (`ruff format`) owns line wrapping, so E501 (line length) is disabled.
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── PyTorch CUDA ───────────────────────────────────────────────────────────
# By default uv resolves torch from PyPI which only ships CPU builds.
# Point torch/torchvision at the PyTorch CUDA 12.4 wheelhouse so the GPU
# (NVIDIA GeForce RTX 4070 SUPER, compute 8.9, driver 596.x) is usable.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (real LLM / real web tool calls)",
    "sandbox: marks sandbox tests (engine availability checks, use real assets)",
    "network: marks tests that make real network calls",
]
filterwarnings = [
    # SQLAlchemy internals still use utcnow (not our code — fixed above).
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning:sqlalchemy",
    # pytesseract C extension wrappers (SwigPyPacked, SwigPyObject, swigvarlink)
    # lack __module__.  ?i makes the regex case-insensitive.
    "ignore:(?i)builtin type .*swig.* has no __module__ attribute:DeprecationWarning",
    # Pydantic v2 internals (class-based config in third-party libs).
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.27",
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
